aws-sdk-compile-checks-usage/tests/fails/unsure_what_sdk_to_use.stderr
error: method `tag_resource` is used in multiple SDKs! Please add the right one to the attribute (and if you are using multiple SDKs in this function, add those too). accessanalyzer, alexaforbusiness, amp, amplify, amplifyuibuilder... (abbreviated list)
 --> tests/fails/unsure_what_sdk_to_use.rs:6:12
  |
6 |     client.tag_resource()
  |            ^^^^^^^^^^^^
